Bump to spark-fast_tests 0.4.0