@@ -6,8 +6,11 @@ scalaVersion := "$scalaVersion$"
 
 sparkVersion := "$sparkVersion$"
 
-sparkComponents ++= Seq("sql", "hive")
+sparkComponents ++= Seq("sql")
 
-spDependencies += "MrPowers/spark-fast-tests:0.2.0"
+spDependencies += "MrPowers/spark-fast-tests:0.4.0"
 
 libraryDependencies += "org.scalatest" %% "scalatest" % "3.0.1" % "test"
+
+fork in Test := true
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
